update home image

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -31,3 +31,7 @@ position: relative;
 
 
 /****************************************IMAGE STYLING********************************************/
+
+img{
+    margin-left: 15em;
+}
