--- a/CSS/home.css
+++ b/CSS/home.css
@@ -36,13 +36,6 @@ text-align: center;
 margin-top: 50px;
 }
 
-.description{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 15px;
-    text-align: right;
-    margin-right: 15em;
-}
-
 
 footer{
 text-align: center;
@@ -52,6 +45,13 @@ display: block;
 position: relative;
 }
 
+#typedtext{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    position: relative ;
+    left: 500px;
+    bottom: 200px;
+}
 
 
 
@@ -59,7 +59,10 @@ position: relative;
 /****************************************IMAGE STYLING********************************************/
 
 img{
-    margin-left: 15em;
+    position: relative;
+    left: 150px;
+    top: 45px;
+
 }
 
 .line-1{
