--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -49,3 +49,12 @@ margin-top: 2em;
     font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
  }
+
+ .btn{
+    font-size: 25px;
+    word-spacing: 0px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    word-spacing: 100px;
+ }
