--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -63,3 +63,18 @@ margin-top: 2em;
     width: 5px;
     height: 5%;
  }
+
+ /****************************************************RESPONSIVE DESIGN********************************************************** */
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav li {
+        margin: 0.5em 0;
+    }
+    
+    footer {
+        position: static;
+    }
+}
