--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -242,3 +242,9 @@ p{
   cursor: pointer;
   margin-left: 42em;
 }
+
+/*************************************************Essay images************************************************************/
+
+.bbd-image{
+  margin-left: 15em;
+}
