--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -83,11 +83,11 @@ i{
   height: 5%;
 }
 
-p{
+/*p{
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
   font-size: 17px;
-}
+}*/
 
 .content-container{
   margin-top: 5em;
@@ -199,8 +199,18 @@ p{
   margin-left: 42em;
 }
 
-/*************************************************Essay images************************************************************/
+/*************************************************images************************************************************/
 
 .bbd-image{
   margin-left: 15em;
+}
+
+.portfolio-images{
+  margin-left: 50em;
+}
+
+/************************************************Text styling********************************************************************/
+
+.portfolio-project-description{
+  float: left;
 }
