--- a/CSS/adviceslip.css
+++ b/CSS/adviceslip.css
@@ -21,30 +21,31 @@
 
 #results p{
   font-size:20px;
-  font-family: 'Poppins', sans-serif;
+  font-family:'Times New Roman', Times, serif
 }
 
 .btn {
-  background-color: teal;
-  padding: 10px;
-  display: block;
-  border: 0;
-  border-radius: 5px;
-  color: #fff;
-  outline: 0;
-  box-shadow: var(--main-shadow);
+  background-color: #b58ca8;
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 10px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 3px;
   cursor: pointer;
-  transition: all .2s ease-in;
-  width: 100px;
+  margin-left: 42em;
 }
 
 .btn:hover {
-  background-color: green;
-  color: yellow;
+  background-color: rgb(194, 104, 163);
+  color: rgb(248, 248, 248);
 }
 
 #results {
   padding: 20px;
   box-shadow: var(--main-shadow);
   margin-bottom: 30px;
+  background-color: #b58ca823;
 }
