--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -48,16 +48,15 @@ a{
 
 
 .footer {
-  clear: both;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.158);
-  color: black;
-  text-align: center;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 15px;
+     background-color: rgba(255, 255, 255, 0.158);
+    color: black;
+    text-align: center;
+    padding: 1em;
+    /* Ensure footer is always at the bottom */
+    position: relative;
+    bottom: 0;
+    width: 100%;
+
 }
 
 .footer-icons{
