--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -4,8 +4,8 @@ body{
   background-color: #DCC7BE  ;
 }
 
-#nav {
-  background-color: rgba(255, 255, 255, 0.571);
+nav {
+  background-color: rgba(255, 255, 255, 0.244);
   padding: 1em 0;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.082);
 }
