--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -170,11 +170,10 @@ p{
   }
 
   /****************************************Typewriter effect********************************************/
- #typewriter-text{
-  font-size: 20px;
-  font-family: 'Times New Roman', Times, serif;
-  margin-left: 40em;
- }
+  #typedtext {
+    font-family: monospace;
+    white-space: pre;
+}
 
 
  /********************************************Button styling*************************************************************/
