--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -170,10 +170,10 @@ p{
   }
 
   /****************************************Typewriter effect********************************************/
-  #typedtext {
-    font-family: monospace;
-    white-space: pre;
-}
+ .typewriter-container p{
+  margin-left: 40em;
+  margin-top: 60px;
+ }
 
 
  /********************************************Button styling*************************************************************/
