--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -198,6 +198,11 @@ p{
   margin-left: 42em;
 }
 
+.button:hover {
+  background-color: rgba(171, 118, 153, 0.822);
+  color: black;
+}
+
 /*************************************************images************************************************************/
 
 .bbd-image{
@@ -211,6 +216,7 @@ p{
 .home-img{
   margin-left: 10em;
 }
+
 
 
 /************************************************Text styling********************************************************************/
