--- a/CSS/adviceslip.css
+++ b/CSS/adviceslip.css
@@ -39,8 +39,8 @@
 }
 
 .btn:hover {
-  background-color: rgb(194, 104, 163);
-  color: rgb(248, 248, 248);
+  background-color: rgba(171, 118, 153, 0.822);
+  color: black;
 }
 
 #results {
