--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -175,12 +175,6 @@ p{
     }
   }
 
-  /****************************************Typewriter effect********************************************/
- .typewriter-container p{
-  margin-left: 40em;
-  margin-top: 60px;
- }
-
 
  /********************************************Button styling*************************************************************/
 
@@ -221,6 +215,10 @@ p{
 
 /************************************************Text styling********************************************************************/
 
+.description-home{
+  margin-left: 40em;
+  padding: 20px 0px;
+}
 .portfolio-project-description{
   float: left;
 }
