--- a/CSS/csscards.css
+++ b/CSS/csscards.css
@@ -18,7 +18,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.316);
     transition: 0.3s;
     border-radius: 10px;
-    background-color:#DCC7BE ;
+    background-color:#b58ca832 ;
   }
   
   .card:hover {
